// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binary_and_template.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function() {} + foo)\`\`;

=====================================output=====================================
export default (function() {} + foo)\`\`;

================================================================================
`;

exports[`body.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (class {}[1] = 1);

=====================================output=====================================
export default (class {}[1] = 1);

================================================================================
`;

exports[`class_instance.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (class {}.getInstance());

=====================================output=====================================
export default (class {}.getInstance());

================================================================================
`;

exports[`function_in_template.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function templ() {})\`foo\`;

=====================================output=====================================
export default (function templ() {})\`foo\`;

================================================================================
`;

exports[`function_tostring.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function() {}).toString();

=====================================output=====================================
export default (function() {}.toString());

================================================================================
`;

exports[`iife.js 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function foo() {})();

=====================================output=====================================
export default (function foo() {})();

================================================================================
`;
